# filemaker-lib

./: Cargo.toml  README.MD
examples/: fetch_databases_list.rs  filemaker_instance_creation.rs  filemaker_layout_fetcher.rs  filemaker_multiple_record_adder.rs  filemaker_record_deleter.rs  filemaker_record_updater.rs  filemaker_search_results_output.rs  filemaker_single_record_adder.rs  filemaker_total_records_getter.rs  get_databases.rs  main_filemaker.rs
src/: lib.rs
