[package]
name = "filemaker-lib"
version = "0.1.0"
edition = "2021"
autoexamples = true
description = "A library for interacting with a filemaker api"
license-file = "LICENSE"
repository = "https://github.com/Drew-Chase/filemaker-lib"
readme = "README.MD"


[dependencies]
reqwest = {version =  "0.12.12", features = ["json"] }
base64 = "0.22.1"
serde = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.95"
log = { version = "0.4.25", optional = false }
