[package]
name = "filemaker-lib"
version = "0.2.1"
edition = "2024"
autoexamples = true
description = "A library for interacting with a filemaker api"
license-file = "LICENSE"
repository = "https://github.com/Drew-Chase/filemaker-lib"
readme = "README.MD"


[dependencies]
reqwest = { version = ">=0.12.12", features = ["json"] }
base64 = ">=0.22.1"
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
tokio = { version = ">=1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = ">=1.0.95"
log = { version = ">=0.4.25", optional = false }
percent-encoding = {version = "2.3.2"}